--- a/index.html
+++ b/index.html
@@ -2,9 +2,67 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="rockpaperscissors.js"></script>
+  <h1 class="text-center">Welcome to Rock, Paper, Scissors!</h1>
+  <h2 class="text-center">Choose your weapon!</h2>
+  <div class="container text-center">
+    <div class="row align-items-center">
+      <div class="col weapon">
+        <img id="rock" src="rock.png" class="img-fluid" alt="rock">
+      </div>
+      <div class="col weapon">
+        <img id="paper" src="paper.png" class="img-fluid" alt="paper">
+      </div>
+      <div class="col weapon">
+        <img id="scissors" src="scissors.png" class="img-fluid" alt="scissors">
+      </div>
+    </div>
+  </div>
+  <h2 class="text-center">Current Score</h2>
+  <p class="text-center">5 rounds per game</p>
+  <div class="container text-center">
+    <div class="row">
+      <div class="col">
+        <h2>You</h2>
+        <p id="playerScoreText" class="scoreText"></p>
+      </div>
+      <div class="col">
+        <h2>Computer</h2>
+        <p id="computerScoreText" class="scoreText"></p>
+      </div>
+      <div class="col">
+        <h2>Ties</h2>
+        <p id="tiesText" class="scoreText"></p>
+      </div>
+    </div>
+  </div>
+  <div class="container text-center">
+    <div class="row">
+      <div class="col">
+        <span id="gameResult"></span>
+      </div>
+    </div>
+  </div>
+  <div class="container text-center">
+    <div class="row">
+      <div class="col">
+        <button id="reset" type="button" class="btn btn-primary">New game</button>
+      </div>
+    </div>
+  </div>
+  <div class="container text-center">
+    <div class="row">
+      <div class="col">
+        <span id="result"></span>
+      </div>
+    </div>
+  </div>
+  <script src="rockpaperscissors.js"></script>
 </body>
 </html>
